# starter-ml

./: .gitignore  README.md  makefile  pyproject.toml
_utils/: README.md  containerfile_dev  makefile
devpi/: README.md  makefile  pyproject.toml
jupyter_ml/: README.md  makefile  pyproject.toml
jupyter_ml/starter_ml/: hugging-face.ipynb  hugging-face.py
jupyter_ml/starter_ml/.ipynb_checkpoints/: Untitled-Copy1-checkpoint.ipynb  hugging-face-checkpoint.ipynb  llama-checkpoint.ipynb
llama2/: containerfile  makefile  pyproject.toml
llm/_security/attestation/: README.md  cosign.pub  makefile
llm/_security/attestation/cosign/TinyLlama/TinyLlama-1.1B-Chat-v1.0/: .gitattributes.sig  README.md.sig  config.json.sig  eval_results.json.sig  generation_config.json.sig  model.safetensors.sig  special_tokens_map.json.sig  tokenizer.json.sig  tokenizer.model.sig  tokenizer_config.json.sig
llm/_security/attestation/digest/TinyLlama/TinyLlama-1.1B-Chat-v1.0/: .gitattributes.digest  README.md.digest  config.json.digest  eval_results.json.digest  generation_config.json.digest  model.safetensors.digest  special_tokens_map.json.digest  tokenizer.json.digest  tokenizer.model.digest  tokenizer_config.json.digest
llm/_security/attestation/gpg/TinyLlama/TinyLlama-1.1B-Chat-v1.0/: .gitattributes.sig  README.md.sig  config.json.sig  eval_results.json.sig  generation_config.json.sig  model.safetensors.sig  special_tokens_map.json.sig  tokenizer.json.sig  tokenizer.model.sig  tokenizer_config.json.sig
llm/_security/attestation/mlbom/TinyLlama/TinyLlama-1.1B-Chat-v1.0/: mlbom-reference.xml  mlbom.xml
llm/_security/attestation/pubkeys/: mlbom.pub
llm/_security/llm-guard-openai/: makefile
llm/_security/llm-guard-openai/src/: app-unprotected2.py  app.py  app2.py
llm/_security/llm_guard_gradio_openai/: README.md  makefile  pyproject.toml
llm/_security/llm_guard_gradio_openai/src/: app-protected-no-streaming.py  styles.css
llm/_security/llm_guard_openai/: README.md  makefile  pyproject.toml
llm/_security/llm_guard_openai/src/: app-blocked2.py  app1-protected.py  app1-unprotected.py  app2-no-injection.py  app2-protected.py  app2-unprotected.py
llm/_security/model_signing/: README.md
llm/_security/pickle/: README.md  makefile  pyproject.toml
llm/_security/pickle/data/: linear_regression.pkl  secret_file.txt
llm/_security/pickle/src/: load-array.py  load-compromise.py  load-model.py  load-pandas.py  modify-model.py  save-array.py  save-compromise.py  save-model.py  save-pandas.py
llm/_security/promptfoo/: README.md  makefile
llm/_security/promptfoo/data/: README.md  promptfooconfig.yaml
llm/_security/pypi_package/: README.md  fine-tuning_hal.txt  makefile  pyproject.toml
llm/_security/pypi_package/src/trenchcoat/: example.py
llm/_security/simple_garak/: .dockerignore  README.md  env-sample.txt  makefile  pyproject.toml
llm/_security/terrapin/: .dockerignore  README.md  makefile  pyproject.toml
llm/_security/terrapin/attestations/: config.json.attestation  model.safetensors.attestation
llm/_security/terrapin/src/: app.py
llm/client_server_openai/: README.md  compose.yaml  makefile  pyproject.toml
llm/client_server_openai/backend/: makefile  pyproject.toml
llm/client_server_openai/backend/src/: backend.py  openai_llm_server.py
llm/client_server_openai/backend_v2/: makefile  pyproject.toml
llm/client_server_openai/backend_v2/src/: backend.py
llm/client_server_openai/frontend/: makefile  pyproject.toml
llm/client_server_openai/frontend/src/: frontend.py  openai_llm_client.py
llm/client_server_openai/k8s/: dep-backend.yaml  dep-frontend.yaml  makefile  svc-frontend.yaml
llm/client_server_openai/k8s/manifests/: svc-backend.yaml
llm/client_server_openai/src/: main_with_openai_llm.py  main_with_prompt_tempate.py  main_with_prompt_tempate_chain.py  openai_llm_as_function.py  openai_llm_client.py  openai_llm_server.py
llm/containerize_model/: README.md  env-sample.txt  makefile  pyproject.toml
llm/containerize_model/base_requirements/: pyinstaller.in  pyinstaller.out
llm/containerize_model/src/: app.py  mode_download.py
llm/gradio_local_model/: README.md  env-sample.txt  makefile  pyproject.toml
llm/gradio_local_model/src/: app.py
llm/gradio_openai/: README.md  containerfile  makefile  pyproject.toml
llm/gradio_openai/src/: app.py
llm/llama2/: makefile
llm/llama2/src/: llama2-download.py  llama2.py
llm/llm-guard-openai/: makefile  pyproject.toml
llm/llm-guard-openai/src/: app-unprotected.py
llm/rag_langchain_openai/: README.md  makefile  pyproject.toml
llm/rag_langchain_openai/data/: scalexi.txt
llm/rag_langchain_openai/src/: app.py
llm/simple_garak/: makefile  pyproject.toml
llm/simple_local_model/: README.md  containerfile_download  env-sample.txt  makefile  pyproject.toml
llm/simple_local_model/src/: app.py
llm/simple_openai/: README.md  app.py  makefile  requirements.txt
llm/streamlit_openai_agents/: README.md  makefile  pyproject.toml
llm/streamlit_openai_agents/src/: app.py
starter_ml/: hugging-face.ipynb  hugging-face.py
