[tool.poetry]
name = "starter-ml"
version = "0.1.0"
description = ""
authors = ["Vicente Herrera <vicenteherrera@vicenteherrera.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.34.0"
jupyterlab = "^4.0.7"
matplotlib = "^3.8.0"
torch = "^2.1.0"
ipywidgets = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
