[tool.poetry]
name = "starter-ml"
version = "0.1.0"
description = ""
authors = ["Vicente Herrera <vicenteherrera@vicenteherrera.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.34.0"
jupyterlab = "^4.0.7"
matplotlib = "^3.8.0"
ipywidgets = "^8.1.1"
torch = [
  {version = "^2.1.0", platform = "darwin"},
  {version = "^2.1.0+cu118", platform = "windows", source = "torch-cuda11.8"},
  {version = "^2.1.0+cu118", platform = "linux", source = "torch-cuda11.8"}
]

[[tool.poetry.source]]
name = "torch-cuda11.8"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
