[tool.poetry]
name = "jupyter_ml"
version = "0.1.0"
description = ""
authors = ["Vicente Herrera <vicenteherrera@vicenteherrera.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.7"
transformers = "^4.41.2"
jupyterlab = "^4.2.1"
matplotlib = "^3.9.0"
ipywidgets = "^8.1.3"
torch = "^2.3.0"

[build-system]
requires = ["poetry-core>=1.8.3"]
build-backend = "poetry.core.masonry.api"
