[tool.poetry]
name = "jupyter_ml"
version = "0.1.0"
description = ""
authors = ["Vicente Herrera <vicenteherrera@vicenteherrera.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
jupyterlab = "^4.2.2"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
tabulate = "^0.9.0"
ipywidgets = "^8.1.3"
python-dotenv = "^1.0.1"
transformers = "^4.41.2"
torch = "^2.3.1"
pandas = "^2.2.2"
seaborn = "^0.13.2"
scipy = "^1.13.1"

[build-system]
requires = ["poetry-core>=1.8.3"]
build-backend = "poetry.core.masonry.api"
