[tool.poetry]
name = "starter-ml"
version = "0.1.0"
description = ""
authors = ["Vicente Herrera <vicenteherrera@vicenteherrera.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.34.0"
torch = [
  {version = "^2.1.0", platform = "darwin"},
  {version = "^2.1.0+cu118", platform = "windows", source = "torch-cuda11.8"},
  {version = "^2.1.0+cu118", platform = "linux", source = "torch-cuda11.8"}
]
python-dotenv = "^1.0.0"
outlines = "^0.0.9"
accelerate = "^0.24.1"

[[tool.poetry.source]]
name = "torch-cuda11.8"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
mypy = "^1.7.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"
