[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "trenchcoat"
version = "0.0.2"
authors = [
  { name="Vicente Herrera", email="vicenteherrera@vicenteherrera.com" },
]
description = "Small example for security research"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/vicenteherrera/starter-ml/llm/_security/pypi_package"
Issues   = "https://github.com/vicenteherrera/starter-ml/issues"